--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-**/node_modules/
+# Ignore node_modules folders recursively
+**/node_modules
+
+# Ignore the specific uploads folder in backend
+student_Management_system/student_Management_system/backend/uploads/
