--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.1.4",
